--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ cursor:pointer;font-weight:600;
 background:#f4c430;
 }
 .card{
-background:white;padding:25px;
+background:green;padding:25px;
 border-radius:20px;
 box-shadow:0 10px 25px rgba(0,0,0,.1);
 margin-bottom:20px;
@@ -134,6 +134,10 @@ to{opacity:1;}
 </div>
 
 <section>
+  <div class="contact-info">
+  <p><strong>Email:</strong> goclean277@gmail.com</p>
+  <p><strong>WhatsApp:</strong> 085945466409</p>
+</div>
 <h2 id="priceTitle">Price List</h2>
 
 <div class="card">
