Update brand name from 'GoClean VIP' to 'GoClean'

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ to{opacity:1;}
 </div>
 
 <div class="hero">
-<h1>🏡 GoClean VIP</h1>
+<h1>🏡 GoClean </h1>
 <p id="subtitle">Premium House & Garden Cleaning Service</p>
 <a href="https://wa.me/6285945466409" class="btn btn-wa">WhatsApp</a>
 <a href="https://www.google.com/maps?q=Merendeng,Kuta,Mandalika" target="_blank" class="btn btn-map">Google Maps</a>
@@ -201,7 +201,7 @@ to{opacity:1;}
 
 <footer>
 Merendeng, Kuta Mandalika <br>
-© 2026 GoClean VIP
+© 2026 GoClean 
 </footer>
 
 <a class="float-wa" href="https://wa.me/6285945466409" target="_blank">💬 WhatsApp</a>
