Update title and headings in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GoClean VIP | House & Garden Cleaning</title>
+<title>GoClean  | House & Garden Cleaning</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
@@ -127,7 +127,7 @@ to{opacity:1;}
 </div>
 
 <div class="hero">
-<h1>🏡 GoClean </h1>
+<h1>🏡 GoClean</h1>
 <p id="subtitle">Premium House & Garden Cleaning Service</p>
 <a href="https://wa.me/6285945466409" class="btn btn-wa">WhatsApp</a>
 <a href="https://www.google.com/maps?q=Merendeng,Kuta,Mandalika" target="_blank" class="btn btn-map">Google Maps</a>
@@ -141,8 +141,8 @@ to{opacity:1;}
 <h2 id="priceTitle">Price List</h2>
 
 <div class="card">
-<h3>Small House (1-2 Rooms)</h3>
-<div class="price">Rp120.000 – Rp150.000</div>
+<h3>Small House (1-2 Rooms)</h3> house cleaning
+<div class="price">Rp120.000 – Rp150.000</div> +Rp30.000
 </div>
 
 <div class="card">
